@@ -2,7 +2,7 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2013, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2020, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
@@ -27,7 +27,7 @@
  * ----------------------
  * XIntervalDataItem.java
  * ----------------------
- * (C) Copyright 2006-2008, by Object Refinery Limited.
+ * (C) Copyright 2006-2020, by Object Refinery Limited.
  *
  * Original Author:  David Gilbert (for Object Refinery Limited);
  * Contributor(s):   -;
@@ -58,7 +58,7 @@ public class XIntervalDataItem extends ComparableObjectItem {
      * @param y  the y-value.
      */
     public XIntervalDataItem(double x, double xLow, double xHigh, double y) {
-        super(new Double(x), new YWithXInterval(y, xLow, xHigh));
+        super(Double.valueOf(x), new YWithXInterval(y, xLow, xHigh));
     }
 
     /**
@@ -79,8 +79,7 @@ public class XIntervalDataItem extends ComparableObjectItem {
         YWithXInterval interval = (YWithXInterval) getObject();
         if (interval != null) {
             return interval.getY();
-        }
-        else {
+        } else {
             return Double.NaN;
         }
     }
@@ -94,8 +93,7 @@ public class XIntervalDataItem extends ComparableObjectItem {
         YWithXInterval interval = (YWithXInterval) getObject();
         if (interval != null) {
             return interval.getXLow();
-        }
-        else {
+        } else {
             return Double.NaN;
         }
     }
@@ -109,8 +107,7 @@ public class XIntervalDataItem extends ComparableObjectItem {
         YWithXInterval interval = (YWithXInterval) getObject();
         if (interval != null) {
             return interval.getXHigh();
-        }
-        else {
+        } else {
             return Double.NaN;
         }
     }
